apps/actualbudget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actualbudget
  labels:
    goldilocks.fairwinds.com/enabled: "true"
